[gd_scene load_steps=8 format=2]

[ext_resource path="res://music/MusicManager.gd" type="Script" id=1]
[ext_resource path="res://addons/audio_booth/source/music/Song.gd" type="Script" id=2]
[ext_resource path="res://addons/audio_booth/source/music/MusicBooth.gd" type="Script" id=3]
[ext_resource path="res://addons/audio_booth/source/music/containers/TrackContainer.gd" type="Script" id=4]
[ext_resource path="res://music/assets/main.wav" type="AudioStream" id=5]
[ext_resource path="res://music/assets/steering.wav" type="AudioStream" id=6]
[ext_resource path="res://music/assets/radar.wav" type="AudioStream" id=7]

[node name="MusicManager" type="Node"]
script = ExtResource( 1 )

[node name="MusicBooth" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Main" type="Node" parent="MusicBooth"]
script = ExtResource( 2 )
tempo = 94.0
beats = 4

[node name="TrackContainer" type="Node" parent="MusicBooth/Main"]
script = ExtResource( 4 )

[node name="Main" type="AudioStreamPlayer" parent="MusicBooth/Main/TrackContainer"]
stream = ExtResource( 5 )

[node name="Radar" type="Node" parent="MusicBooth"]
script = ExtResource( 2 )
tempo = 94.0
beats = 4

[node name="TrackContainer" type="Node" parent="MusicBooth/Radar"]
script = ExtResource( 4 )

[node name="Radar" type="AudioStreamPlayer" parent="MusicBooth/Radar/TrackContainer"]
stream = ExtResource( 7 )

[node name="Steering" type="Node" parent="MusicBooth"]
script = ExtResource( 2 )
tempo = 94.0
beats = 4

[node name="TrackContainer" type="Node" parent="MusicBooth/Steering"]
script = ExtResource( 4 )

[node name="Steering" type="AudioStreamPlayer" parent="MusicBooth/Steering/TrackContainer"]
stream = ExtResource( 6 )

[node name="Buttons" type="Node2D" parent="."]

[node name="Main" type="Button" parent="Buttons"]
margin_top = 64.0
margin_right = 72.0
margin_bottom = 128.0
text = "Main"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Radar" type="Button" parent="Buttons"]
margin_left = 128.0
margin_top = 64.0
margin_right = 200.0
margin_bottom = 128.0
text = "Radar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Steering" type="Button" parent="Buttons"]
margin_left = 256.0
margin_top = 64.0
margin_right = 328.0
margin_bottom = 128.0
text = "Steering"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/Main" to="." method="_on_Main_pressed"]
[connection signal="pressed" from="Buttons/Radar" to="." method="_on_Rader_pressed"]
[connection signal="pressed" from="Buttons/Steering" to="." method="_on_Steering_pressed"]
